Bug 1649494 - Don't assume a notification has a URL. r=aklotz

Differential Revision: https://phabricator.services.mozilla.com/D88165